@@ -92,6 +92,7 @@
   *  - Fixed ISR definition conflict in the XPLAIN bridge between the software UART and the AVRISP-MKII ISP modules
   *  - Fixed random enumeration failure while in device mode due to interrupts causing the Set Address request to exceed maximum timings
   *  - Fixed MIDI_Host_Flush() not aborting early when the specified MIDI host interface was not configured
+  *  - Fixed MIDI class driver send routines silently discarding packets if the endpoint or pipe is busy (thanks to Robin Green)
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
